--- a/docker/huter-hive3-pytest/Dockerfile
+++ b/docker/huter-hive3-pytest/Dockerfile
@@ -1,5 +1,5 @@
 FROM huter-hive3
-LABEL maintainer="Koosha Hosseiny <koosha.hosseiny@trivago.com>"
+LABEL maintainer="Koosha Hosseiny <i@koosha.io>"
 
 ENV DEBIAN_FRONTEND noninteractive
 
