--- a/huter-common/build.gradle
+++ b/huter-common/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id 'signing'
 }
 
-group = 'com.trivago.huter'
-version = '1.0'
+group = 'io.koosha.huter'
+version = '2.0'
 
 repositories {
     mavenCentral()
@@ -12,9 +13,9 @@ repositories {
 
 dependencies {
     // def hiveVersion = '2.3.7'
-    def hiveVersion = '3.1.2'
+    def hiveVersion = '3.1.3'
     // def tezVersion = '0.8.4'
-    def tezVersion = '0.9.2'
+    def tezVersion = '0.10.2'
 
     compileOnly "org.apache.hive:hive-exec:$hiveVersion:core"
     compileOnly "org.apache.hive:hive-cli:$hiveVersion"
@@ -25,22 +26,24 @@ dependencies {
     compileOnly "org.apache.tez:tez-dag:$tezVersion"
     compileOnly "org.apache.tez:tez-mapreduce:$tezVersion"
 
-    implementation 'org.slf4j:slf4j-api:1.7.32'
-    implementation 'info.picocli:picocli:4.6.1'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'info.picocli:picocli:4.7.5'
 
     // To cover unshaded KryoException in MapJoinOperator imports
-    implementation 'com.esotericsoftware:kryo-shaded:4.0.2'
+    implementation 'com.esotericsoftware:kryo-shaded:4.0.3'
 }
 
-configurations.all {
+configurations.configureEach {
     exclude group: 'ch.qos.logback', module: 'logback-classic'
     exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     exclude group: 'org.pentaho', module: 'pentaho-aggdesigner-algorithm'
 }
 
-task sourceJar(type: Jar) {
-    classifier 'sources'
-    from sourceSets.main.allJava
+java {
+    withJavadocJar()
+    withSourcesJar()
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 publishing {
@@ -49,7 +52,7 @@ publishing {
             pom {
                 name = 'Huter'
                 description = 'Hive Unit TEst Runner'
-                url = 'https://www.github.com/trivago/huter'
+                url = 'https://www.github.com/hkoosha/huter'
                 licenses {
                     license {
                         name = 'The Apache License, Version 2.0'
@@ -60,20 +63,23 @@ publishing {
                     developer {
                         id = 'hkoosha'
                         name = 'Koosha Hosseiny'
-                        email = 'koosha.hosseiny@trivago.com'
+                        email = 'i@koosha.io'
                     }
                 }
                 scm {
-                    connection = 'scm:git:git://github.com/trivago/huter.git'
-                    developerConnection = 'scm:git:ssh://github.com/trivago/huter.git'
-                    url = 'https://github.com/trivago/huter'
+                    connection = 'scm:git:git://github.com/hkoosha/huter.git'
+                    developerConnection = 'scm:git:ssh://github.com/hkoosha/huter.git'
+                    url = 'https://github.com/hkoosha/huter'
                 }
             }
-            groupId 'com.trivago.huter'
+            groupId 'io.koosha.huter'
             artifactId 'huter-common'
             version version
             from components.java
-            artifact tasks.sourceJar
         }
     }
 }
+
+//signing {
+//    sign publishing.publications.mavenJava
+//}
