--- a/docker/huter-hive3/Makefile
+++ b/docker/huter-hive3/Makefile
@@ -1,10 +1,10 @@
 DOCKER_LABEL := "huter-hive3"
 
-HUTER_FILE := huter-hive3-1.0
+HUTER_FILE := huter-hive3-2.0
 HUTER_ARCHIVE := "${HUTER_FILE}.tar"
 HUTER_FROM := "../../huter-hive3/build/distributions/${HUTER_ARCHIVE}"
 
-include ../Makefile.common
+include ../common.Makefile
 
 .PHONY: get-files
 get-files: clean
